tests/types/tnontype.nim
discard """
  errormsg: "expected type, but got: 3"
"""

type
  Foo = (block:
    int)
  
  Bar = 3
